# src/app.ts
@@ -7,13 +7,14 @@ import { defaultErrorHandler } from '~/middlewares/error.middlewares'
 import authRouter from '~/routes/auth.routes'
 import bookmarksRouter from '~/routes/bookmarks.routes'
 import conversationsRouter from '~/routes/conversations.routes'
+import docsRouter from '~/routes/docs.routes'
 import likesRouter from '~/routes/likes.routes'
 import mediasRouter from '~/routes/medias.routes'
+import notificationsRouter from '~/routes/notifications.routes'
 import searchRouter from '~/routes/search.routes'
 import staticRouter from '~/routes/static.routes'
 import tweetsRouter from '~/routes/tweets.routes'
 import usersRouter from '~/routes/users.routes'
-import docsRouter from '~/routes/docs.routes'
 import { initFolder } from '~/utils/file'
 import initSocket from '~/utils/socket'
 
@@ -40,6 +41,7 @@ app.use('/bookmarks', bookmarksRouter)
 app.use('/likes', likesRouter)
 app.use('/search', searchRouter)
 app.use('/conversations', conversationsRouter)
+app.use('/notifications', notificationsRouter)
 app.use('/static', staticRouter)
 app.use('/static/video', express.static(UPLOAD_VIDEO_DIR))
 
